@@ -13,21 +13,16 @@ AUX wget-1.16-openssl-header.patch 823 SHA256 10101a30356f926b5d6c66d85aae523dc6
 AUX wget-1.16-openssl-no-ssl3.patch 875 SHA256 ae0e4665d133137db574f5ab3e154a556dac0654340b3aa48f8c4b9d1aebd019 SHA512 816cfe0b489d30311fe8b617d108b06505821d37061aff983a3bf9c58b1908e97710610af575bb2248709a9ee376683cc1bb067ddeff09acc4cd33b658a4ced2 WHIRLPOOL b522ee53918994028b3a758ac3d0c777e8116036d208fa4d5582ffcde5fe67abcef1b0cda38bbc1cf4c44776d3ccc0c1a4d894a1eba36407de7725b18d9452d0
 AUX wget-1.16-pkg-config.patch 6482 SHA256 8153f47feaf71f118fd5f86ca9baa829e2e314b81ad3d1da74d98226cbb92ce0 SHA512 a3d47a68d1eee0c1cd738c11bbc3952eaccb2f6a264d2fc781cf9e73bce6fe4926dc140bcdfa351dcecfbd5653d89826b657d3c623e96390e78b797c92dc9b09 WHIRLPOOL 930f2129d03d12626d8337472c9fea27a85622204dc2105327cfe5c7d385e5b086fcc4bacdcb435b364b6a25e2a8a524e9cd5c6d725af426b5bae2188183d8d2
 AUX wget-1.16-tests-skip.patch 730 SHA256 07e2198e97afdb770ac19b196698cda1209d85c929a1100d0e9e1c5975cf1a2b SHA512 e227c1f153750b190de868671b28bee38e9b3029658da5622514a56633462189117b96c1c3d829e97e88b1d3dff8c6bdec4a309f72c6741d3503983051798453 WHIRLPOOL 675dab675ba8bb8064b6674457ffac40c0f530c3f5dce229fa7f095643ad2e05665de6c4c1813cb1f90610af8a7aba884304c7f24e7087563060d42e6a2bd6ad
-DIST wget-1.14.tar.xz 1584060 SHA256 1761d7f7c6a2ad6c8d494d239c53f0c17126efb6449ada16dee3a66d87a4147b SHA512 b01351b3e086c713c0f64af34d87e013d2edb69b76fa84699b3afa4975622993053c4e367f965218c8a3326a85b734f3ee8bcce8ba0c72a89bb2208f3b1759ef WHIRLPOOL 8071b49a28ac03c832d965bfb9c00e4f28f59098c896c40c73081e56ec0091fbe8290b115e3eaa85b81c90006a39e3efba811f30dea5d33b726fc62d2b307824
-DIST wget-1.15.tar.xz 1679908 SHA256 d18a5f4354c9854b1f1b9897353443bceed8e19a391d36d4dbebe85cc9d480fb SHA512 1cb49e083500cb2753f023d9b4594b61d6e909994ea327ed9b861424df77df3ffbe7c431af9ee73de0eda083b3bb28cf22a53c2b3a3b781754fce39f4c13fae4 WHIRLPOOL 5d649f7fba4ad4f1482a75c960f845cef22db1711178bd22ed29a6fd1242f483e53ca2501e62b59bad23fbbf554ddff1f74fc2e79bd4ecaeefd7e28795c743f4
 DIST wget-1.16.tar.xz 1697308 SHA256 9261dd090a17687b6dc0682a257e90a926def15624b650e8f799af57e5c8b0e7 SHA512 20f1247a344cac8f9120a506a4ca1fff84e5f3f5abb8492f67c22d213cb41cbfa24d5a68b91512a6ca42765d319bea8785adff8fad58d854f8f563c6593b4298 WHIRLPOOL a1094b27f77547baf7dac6f1a6ded691b3a043caff948e8fd84555a730d6a02ae157f4d72144f3c1672439166da28a4cca26f9c4f7ec4473603899545cc956b4
-EBUILD wget-1.14-r1.ebuild 2790 SHA256 4638bccfe9a760c0974889f79b1230436083b4312f1f6c6cd9e84dfd78983faa SHA512 44cca80deed49c8cde34eb7931c1b718cd7602152d7c2cadd47d49b03f763588cb37706b1c50f7828a2f06b7923fbca10c5a4610fa2c6f3efbc91d820c74d472 WHIRLPOOL 75c4271faa98106a1f6bfa0e8294e0527e9d6c2caf50ca7cd0dae2b8584222f12b39322b7b3f8c2cd70b5eb9c5fcb30fa6787a857aef3c451471be2d88959950
-EBUILD wget-1.14.ebuild 2636 SHA256 3603addd5ca6d21501997584a2fc185bc6314b843c6c3296166f082938bd74aa SHA512 4fabe38bb5c10638fd77ca47544ef24c44783146f97a7ca98e893e78cee408c8652414e7fc49d1d618ff0b72c83bc3b851fd2f61fd05cb06dc0b02c7d8e4da97 WHIRLPOOL b3423bebb6c567b35916b6979be10b7986a30003ce1944ffe0ecdd0ed4740c200af81e08cb4b0cc10e88be085e02e07dc220325cb34d72145f008eff4d061a05
-EBUILD wget-1.15-r1.ebuild 2500 SHA256 01e6f1ebe23cb13854441fdc0e78257b370ab1bb5934a2622257cf836a2ab726 SHA512 230277d6e90429d17284fcd33938c99e41bebdc8d3ee44707c0deb367f0ebf8bfb1ac6678a79e9907ac48db8db784554f39726a65840b0e1c54b7c10b0f53d04 WHIRLPOOL 713ce78ed2b89aec130a8d063ff5f2406ba8a527941ac72da75128d75ff62790765fe4a2ea1a5bbca03e6738d9ce7d265d2fd3a5d78b36abf7e0131751d297d7
 EBUILD wget-1.16.ebuild 2895 SHA256 cfaeaa0ca063ab3d59f8bfbc72f74a00493de3bfadf712267e0ef43b60f33ac9 SHA512 58ac7fdeb25d881a7ec1b7e894457a1847da9bc2cee110ca3e5315e50f0bd1361602263893dbde50bacfa81f11c91c5b60534350459a9c3dc9cc400a2676f850 WHIRLPOOL dbea347ed0b4be1bec6de95a6751d8ba8e2c61d95192a50a203e40ac935d08843e216d326bd45e03c8b8ae118ad2a48969d85c6eb608c88b3e2b44903693d5f1
-MISC ChangeLog 29292 SHA256 e52812373a69670b9554e7bccd0f240c7ce6c4c79f96c6d012efc293798e83cd SHA512 76c7598b9c2aee99176eff2d107894a0275dddb904d0f66673694befcf0c3700d5e5dc866c1385e62d344f7ce1e79017a509cf53ef36f0fa2d57319161daaf4f WHIRLPOOL fe0ebf15051d49775aacf08a7b8bf877ab95686a1be92329d5daf7ee70fb137199a71a5feff64f2b7ff03a69960a27d690458bb0ca01d9df32d6e424be8443ed
+MISC ChangeLog 29452 SHA256 7fa6e39c95a4adb42e8c8993ace8cae6da337c6829dfd3da047a1aea2b79563c SHA512 7604e9a0463f4c60545a968e96c1f8125a3f9390efc827e15203a27962b6686e33a91d700ad504794bfa35789b077176f05bad4c70379b4b889c9819a87cabc1 WHIRLPOOL 1796ea88e6f54f5a1a3ba7128b35b1184f65e1745317c472be8e8ff7af88e8eb41a02f7c089cbf9ecc725f85bb37e953a05253502a43beadf7a9e4774cc13f5d
 MISC metadata.xml 480 SHA256 623ea871cdd741de1f7b1bdde73f38d222d489ed7496694a3b8f2fff7d49cf44 SHA512 4dae8e65a95c5f03e0434fce20012581fb75e33310598ef6b099b11ad611dfdbc5043b0223b1cd791500b1d4dcd19c52ab94142587508b2ed362b11cc7acddb1 WHIRLPOOL 189bc2a775087a96010a7426b562cf55e9426bad2da13e085d14dcf713631466ee4fe9c3dffe1ee578482d7d5bf0e4cac2510af431a4ef1ec21626770fe284b3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iJwEAQEIAAYFAlRfMTQACgkQG9wOWsQutdZPIgQAiuz7IrnzFspyJYA8G4rZc1Mp
-K+AlYUPveKSkx4DlwS2/CYLhZHs6YU57qXg2i6o4CBkvxYnvJTV7fy65IwwnvF0p
-IxbnxkDvnZWy/ngxZd9t570HWOsSJJCqf22YAkf0V7vUizzBEZB+16JtD9R7lXMu
-PG6Skw6hcwQww/nGMMU=
-=hNUu
+iJwEAQEIAAYFAlRoWLsACgkQG9wOWsQutdYQigP+LSlXODtAVhXEdeNFENt0Aetg
+IcjhKv7AaQdxmiOmlPD1sTJxTn5zwYpcZjI913KDe2H+RcgLLPekMMiSJ+VHN5SP
+TZVaQMHgGeVx1g/1tLX4u3LTjd6Uqk31LNPqv9SQCzmgAajRaBwyuSStX4ae3Ieh
+0Xqn2nI+hYHmuoZevQI=
+=w89N
 -----END PGP SIGNATURE-----
